--- a/style.css
+++ b/style.css
@@ -1120,6 +1120,21 @@ footer a i{
     color: #24ffa4;
 }
 
+.nk{
+border-radius: 50px;
+margin-left: 50px;
+border: 2px solid orange;
+margin-right: 50px;
+margin-bottom: 10px;
+margin-top: -100px;
+}
+
+.nk a{
+    position: relative;
+   
+    margin-left: 90px;
+}
+
 
 
 
